--- a/container.yaml
+++ b/container.yaml
@@ -1,6 +1,24 @@
- should be added to the config file in order to fix the error.
-
-Example:
-
-memory: 128Mi
-memoryRequest: 128Mi
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: my-nginx
+spec:
+  selector:
+    matchLabels:
+      run: my-nginx
+  replicas: 2
+  template:
+    metadata:
+      labels:
+        run: my-nginx
+    spec:
+      containers:
+        - name: my-nginx
+          image: nginx
+          ports:
+            - containerPort: 80
+          resources:
+            limits:
+              cpu: 0.5
+            requests:
+              cpu: 0.2
