--- a/container.yaml
+++ b/container.yaml
@@ -1,24 +1,17 @@
 
-
-apiVersion: apps/v1
-kind: Deployment
+          securityContext:
+            allowPrivilegeEscalation: false
+---
+apiVersion: v1
+kind: Service
 metadata:
   name: my-nginx
 spec:
+  type: NodePort
   selector:
-    matchLabels:
-      run: my-nginx
-  replicas: 2
-  template:
-    metadata:
-      labels:
-        run: my-nginx
-    spec:
-      containers:
-        - name: my-nginx
-          image: nginx
-          resources:
-            requests:
-              memory: "128Mi"
-          ports:
-            - containerPort: 80
+    run: my-nginx
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+      nodePort: 30123
