--- a/container.yaml
+++ b/container.yaml
@@ -1,17 +1,19 @@
-
-          securityContext:
-            allowPrivilegeEscalation: false
----
-apiVersion: v1
-kind: Service
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: my-nginx
 spec:
-  type: NodePort
   selector:
-    run: my-nginx
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
-      nodePort: 30123
+    matchLabels:
+      run: my-nginx
+  replicas: 2
+  template:
+    metadata:
+      labels:
+        run: my-nginx
+    spec:
+      containers:
+        - name: my-nginx
+          image: nginx
+          ports:
+            - containerPort: 80
