--- a/container.yaml
+++ b/container.yaml
@@ -14,6 +14,9 @@ metadata:
 labels:
 run: my-nginx
 spec:
+securityContext:
+  runAsNonRoot: true
+  runAsUser: 0
 containers:
 - name: my-nginx
 image: nginx
