--- a/container.yaml
+++ b/container.yaml
@@ -17,6 +17,7 @@ spec:
 securityContext:
   runAsNonRoot: true
   runAsUser: 0
+  allowPrivilegeEscalation: false
 containers:
 - name: my-nginx
 image: nginx
