--- a/container.yaml
+++ b/container.yaml
@@ -1,7 +1,5 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: my-nginx
+
+
 spec:
   selector:
     matchLabels:
@@ -17,3 +15,5 @@ spec:
           image: nginx
           ports:
             - containerPort: 80
+          securityContext:
+            allowPrivilegeEscalation: false
