--- a/container.yaml
+++ b/container.yaml
@@ -1,3 +1,5 @@
+
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -15,5 +17,8 @@ spec:
       containers:
         - name: my-nginx
           image: nginx
+          resources:
+            limits:
+              cpu: 500m
           ports:
             - containerPort: 80
