--- a/container.yaml
+++ b/container.yaml
@@ -1,3 +1,5 @@
+
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -17,3 +19,8 @@ spec:
           image: nginx
           ports:
             - containerPort: 80
+          resources:
+            limits:
+              cpu: 2
+            requests:
+              cpu: 1
