--- a/container.yaml
+++ b/container.yaml
@@ -1,4 +1,4 @@
-
+ 
 
 apiVersion: apps/v1
 kind: Deployment
@@ -22,3 +22,4 @@ spec:
           resources:
             limits:
               cpu: "1"
+            memory: "128Mi" # added code
